-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Array::get and Array::set call JVM_GetArrayElement and JVM_SetArrayElement function to get and set an array element. The JVM entry points don't support flattened arrays.
Instead of adding the flatten array support in JVM_GetArrayElement and JVM_SetArrayElement, we can do that in Array::get and Array::set in Java.
Instead of adding the flatten array support in JVM_GetArrayElement and JVM_SetArrayElement, we can do that in Array::get and Array::set in Java.
- relates to
-
JDK-8209554 [lworld] ClassCastException thrown for JCK test instead of expected IllegalArgumentException
-
- Resolved
-