8207815: [lworld] JVM_GetArrayElement and, JVM_SetArrayElement don't work for flatten array

Reviewed-by: jrose